--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+.env
 
 # IntelliJ related
 *.iml
@@ -43,3 +44,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+firebase_options.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist"lib/firebase_options.dart"   # Ignore le fichier pour ‚viter les futurs commits
